--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<p id="notice"></p>
+<h1>Books</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>リーダブルコート</td>
+      <td>より良いコードを書くためのシンプルで</td>
+      <td><a class="show" href="books/:id">Show</a></td>
+      <td><a class="edit" href="books/:id/edit">Edit</a></td>
+      <td>
+      <a data-confirm="Are you sure?" class="destroy" rel="nofollow" data-method="delete" href="/books/:id">Destroy</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
