--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,24 @@
 <p id="notice"></p>
 <h1>Books</h1>
-<table>
+ <table>
   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+      </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>リーダブルコート</td>
-      <td>より良いコードを書くためのシンプルで</td>
-      <td><a class="show" href="books/:id">Show</a></td>
-      <td><a class="edit" href="books/:id/edit">Edit</a></td>
-      <td>
+      <% @books.each do |book| %>
+        <span><%= book.title %></span>
+        <span><%= book.body %></span>
+        <a class="show" href="books/:id">Show</a>
+      <a class="edit" href="books/:id/edit">Edit</a>
       <a data-confirm="Are you sure?" class="destroy" rel="nofollow" data-method="delete" href="/books/:id">Destroy</a>
-      </td>
-    </tr>
-  </tbody>
-</table>
+      <br>
+      <% end %>
+
+   </tbody>
+  </table>
+
+  <h2>New Book</h2>
