--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,24 +1,26 @@
-<p id="notice"></p>
 <h1>Books</h1>
  <table>
   <thead>
-      <tr>
+   <tr>
         <th>Title</th>
         <th>Body</th>
         <th colspan="3"></th>
-      </tr>
+   </tr>
   </thead>
   <tbody>
+
       <% @books.each do |book| %>
-        <span><%= book.title %></span>
-        <span><%= book.body %></span>
-        <a class="show" href="books/:id">Show</a>
-      <a class="edit" href="books/:id/edit">Edit</a>
-      <a data-confirm="Are you sure?" class="destroy" rel="nofollow" data-method="delete" href="/books/:id">Destroy</a>
-      <br>
+        <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td>&nbsp;<a class="show" href="books/:id">Show</a>&nbsp;</td>
+      <td><a class="edit" href="books/:id/edit">Edit</a>&nbsp;</td>
+      <td><a data-confirm="Are you sure?" class="destroy" rel="nofollow" data-method="delete" href="/books/:id">Destroy</a>
+      </td>
+      </tr>
       <% end %>
 
-   </tbody>
-  </table>
+  </tbody>
+ </table>
 
   <h2>New Book</h2>
